[BL-192] /products/hosts/{hostCode}/versions/{versionId} (GET) API
