# swagger/api.yaml
@@ -394,6 +394,54 @@ paths:
           description: "Product not found"
         405:
           description: "Validation exception"
+
+  /products/hosts/{hostCode}/versions/{versionId}:
+    get:
+      tags:
+      - product
+      summary: "Get Product by hostCode and versionId"
+      description: "Returns Product belongs to a Host and VersionId"
+      operationId: "getProductsByHostcodeAndVersionId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "hostCode"
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: "versionId"
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: "is_indexed"
+        in: "query"
+        description: ""
+        required: false
+        type: boolean
+        format: int32
+      - name: "offset"
+        in: "query"
+        description: ""
+        required: false
+        type: integer
+        format: int32
+      - name: "limit"
+        in: "query"
+        description: ""
+        required: false
+        type: integer
+        format: int32
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/GetProductsResponse"
+        400:
+          description: "Invalid input supplied"
+        404:
+          description: "Host or productNo not found"
   /objects:
     post:
       tags:
