# swagger_server/models/add_version_response_data.py
@@ -1,90 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from .base_model_ import Model
-from datetime import date, datetime
-from typing import List, Dict
-from ..util import deserialize_model
-
-
-class AddVersionResponseData(Model):
-    """
-    NOTE: This class is auto generated by the swagger code generator program.
-    Do not edit the class manually.
-    """
-    def __init__(self, version_id: str=None, version_name: str=None):
-        """
-        AddVersionResponseData - a model defined in Swagger
-
-        :param version_id: The version_id of this AddVersionResponseData.
-        :type version_id: str
-        :param version_name: The version_name of this AddVersionResponseData.
-        :type version_name: str
-        """
-        self.swagger_types = {
-            'version_id': str,
-            'version_name': str
-        }
-
-        self.attribute_map = {
-            'version_id': 'version_id',
-            'version_name': 'version_name'
-        }
-
-        self._version_id = version_id
-        self._version_name = version_name
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'AddVersionResponseData':
-        """
-        Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The AddVersionResponse_data of this AddVersionResponseData.
-        :rtype: AddVersionResponseData
-        """
-        return deserialize_model(dikt, cls)
-
-    @property
-    def version_id(self) -> str:
-        """
-        Gets the version_id of this AddVersionResponseData.
-
-        :return: The version_id of this AddVersionResponseData.
-        :rtype: str
-        """
-        return self._version_id
-
-    @version_id.setter
-    def version_id(self, version_id: str):
-        """
-        Sets the version_id of this AddVersionResponseData.
-
-        :param version_id: The version_id of this AddVersionResponseData.
-        :type version_id: str
-        """
-
-        self._version_id = version_id
-
-    @property
-    def version_name(self) -> str:
-        """
-        Gets the version_name of this AddVersionResponseData.
-
-        :return: The version_name of this AddVersionResponseData.
-        :rtype: str
-        """
-        return self._version_name
-
-    @version_name.setter
-    def version_name(self, version_name: str):
-        """
-        Sets the version_name of this AddVersionResponseData.
-
-        :param version_name: The version_name of this AddVersionResponseData.
-        :type version_name: str
-        """
-
-        self._version_name = version_name
-
